RESOLVED FIXED293466
css/css-view-transitions/old-content-with-overflow-zoomed.html fails because css zoom isn't applied correctly
https://bugs.webkit.org/show_bug.cgi?id=293466
Summary css/css-view-transitions/old-content-with-overflow-zoomed.html fails because ...
Matt Woodrow
Reported 2025-05-22 18:19:54 PDT
This happens with the 'new' variant of this test too.
Attachments
Matt Woodrow
Comment 1 2025-05-22 18:23:10 PDT
Matt Woodrow
Comment 2 2025-05-26 16:47:50 PDT
*** Bug 285097 has been marked as a duplicate of this bug. ***
EWS
Comment 3 2025-05-26 18:32:57 PDT
Committed 295428@main (8443d607cca0): <https://commits.webkit.org/295428@main> Reviewed commits have been landed. Closing PR #45809 and removing active labels.
Radar WebKit Bug Importer
Comment 4 2025-05-26 18:33:22 PDT
Note You need to log in before you can comment on or make changes to this bug.