css/css-view-transitions/(new|old)-content-with-overflow-zoomed.html fails because css zoom isn't applied correctly. https://bugs.webkit.org/show_bug.cgi?id=293466

Reviewed by Tim Nguyen.

Imports the test fix from https://github.com/web-platform-tests/wpt/commit/74fbdf6d5963d7f4330ac9826d30433a8c78f465

Removes the code that removed the zoom factors when converting to pixels, since we want to remain in the zoomed coordinate space.

* LayoutTests/TestExpectations:
* LayoutTests/imported/w3c/web-platform-tests/css/css-view-transitions/content-with-overflow-zoomed-ref.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-view-transitions/new-content-with-overflow-zoomed-expected.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-view-transitions/new-content-with-overflow-zoomed.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-view-transitions/old-content-with-overflow-zoomed-expected.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-view-transitions/old-content-with-overflow-zoomed.html:
* Source/WebCore/dom/ViewTransition.cpp:
(WebCore::ViewTransition::copyElementBaseProperties):

Canonical link: https://commits.webkit.org/295428@main